<resources>
    <string name="app_name">Admin Binair</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_menu">Notification</string>
    <string name="belum_punya_akun"><font color="#000000">Belum punya akun? </font><font color="#F37C20">Daftar</font>
    </string>
    <string name="btn_cari_penerbangan">Cari Penerbangan</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="detail_login">Isi form di bawah untuk mendapatkan akses</string>
    <string name="selamat_datang_login">Selamat Datang</string>
    <string name="nama">Nama</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun"><font color="#000000">Sudah punya akun? </font><font color="#F37C20">Login</font></string>
    <string name="cari_penerbangan">Cari Penerbangan</string>
    <string name="label_dari">Dari</string>
    <string name="ex_kota_dari">Jakarta - CGK</string>
    <string name="label_destinasi">Destinasi</string>
    <string name="ex_kota_tujuan">Surabaya - SUB</string>
    <string name="label_tanggal_berangkat">Tanggal Berangkat</string>
    <string name="ex_tgl_brkt">23/11/2022</string>
    <string name="label_tanggal_pulang">Tanggal Pulang</string>
    <string name="label_penumpang">Penumpang</string>
    <string name="ex_jml_penumpang">1 Penumpang</string>
    <string name="label_kelas">Kelas</string>
    <string name="label_sekali_jalan">Sekali Jalan</string>
    <string name="label_pulang_pergi">Pulang Pergi</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="label_promo_tiket">Promo Tiket</string>
    <string name="ex_promo_title">Stay Happy Weekly Bersama OCBC NISP, Dapatkan Diskon 12%</string>
    <string name="simpan">Simpan</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="label_dewasa">Dewasa (12 tahun ke atas)</string>
    <string name="judul_atur_penumpang">Atur Penumpang</string>
    <string name="label_anak">Anak (2 - 11 tahun)</string>
    <string name="tambah_penumpang">Tambah Penumpang</string>
    <string name="kurangi_penumpang">Kurangi Penumpang</string>
    <string name="pesan_tiket">Pesan Tiket</string>
    <string name="label_detail_penumpang">Detail Penumpang</string>
    <string name="tipe_penumpang">(Dewasa 1)</string>
    <string name="titel">Titel</string>
    <string name="kewarganegaraan">Kewarganegaraan</string>
    <string name="tipe">Tipe</string>
    <string name="nomor_identitas">Nomor Identitas</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="nomor_telp">Nomor Telepon</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="btn_tambah_penerbangan">Tambah Penerbangan</string>
    <string name="label_jam_berangkat">Jam Berangkat</string>
    <string name="label_tambah_penerbangan">Tambah Penerbangan</string>
    <string name="from_airport">Soekarno Hatta International Airport</string>
    <string name="destinatiom_airport">Juanda International Airport</string>
    <string name="label_bandara_asal">Bandara Asal</string>
    <string name="label_bandara_tujuan">Bandara Destinasi</string>
    <string name="label_jam_datang">Jam Kedatangan</string>
    <string name="belum_dipilih">-</string>
    <string name="label_Kapasitas">Kapasitas Pesawat</string>
    <string name="ex_kapasitasPenumpang">200</string>
    <string name="broadcast_notifikasi">Broadcast Notifikasi</string>
    <string name="pesan_broadcast">Pesan Broadcast</string>
    <string name="boradcastnote">Pesan ini akan di tampilkan di laman user</string>
    <string name="log_out">Keluar</string>
    <string name="label_hargaDewasa">Harga Dewasa</string>
    <string name="ex_hargadewasa">200000</string>
    <string name="label_hargaAnakAnak">Harga Anak Anak</string>
    <string name="ex_hargaanakanak">150000</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="list_ticket">List Tiket</string>
    <string name="label_date">Tanggal</string>
    <string name="Label_Jam">Jam</string>
    <string name="label_duration">Durasi</string>
    <string name="label_bagasi">Gratis Hingga 20 Kg</string>
    <string name="label_economy_class">Kelas Ekonomi</string>
    <string name="total_passenger">Jumlah Penumpang</string>
    <string name="label_terisi">Kursi Teisi</string>
    <string name="label_tersedia">Kursi Tersedia</string>
    <string name="list_detailTicket">Detail Ticket</string>
    <string name="list_EditTicket">Edit Ticket</string>
    <string name="btn_saveEdit">Simpan Tiket</string>
    <string name="review_delete">Masukkan Password untuk Verifikasi</string>
    <string name="Label_date_end">Tanggal Pulang</string>
    <string name="label_tanggal_Selesai">Tanggal Pulang</string>
    <string name="ex_tgl_selesai">27/12/2022</string>
    <string name="tipe_penerbangan">Tipe Penerbangan</string>
    <string name="sekali_jalan">Sekali Jalan</string>
    <string name="profil">profil</string>
    <string name="profil_pengguna">Profile Pengguna</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="id_ticket">id Ticket :</string>
    <string name="list_transaction">List Transaksi</string>
    <string name="flight_number">Flight Number :</string>
    <string name="flight_plane_number">PK 625</string>
    <string name="none">-</string>
    <string name="benefits">Benefits :</string>
    <string name="admin_binair">Admin BinAir</string>
    <string name="admin_role">Admin Role</string>
    <string name="price">Harga :</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="ticket_list">Ticket List</string>
    <string name="add_notification">Add Notification</string>
</resources>