<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_home" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:paddingBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="20dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvSearchContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/tvSearchFlightTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_tambah_penerbangan"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:fontFamily="@font/poppins_medium"
                            />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/fromInputContainer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:hint="@string/label_dari"
                            android:textColorHint="@color/black"
                            app:boxBackgroundColor="@color/white"
                            app:boxCornerRadiusBottomEnd="12dp"
                            app:boxCornerRadiusBottomStart="12dp"
                            app:boxCornerRadiusTopEnd="12dp"
                            app:boxCornerRadiusTopStart="12dp"
                            app:boxStrokeColor="@color/content_grey"
                            app:hintTextColor="@color/content_grey">

                            <AutoCompleteTextView
                                android:id="@+id/etFrom"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="16dp"
                                android:drawableStart="@drawable/home_airplanetakeoff"
                                android:drawablePadding="8dp"
                                android:padding="12dp"
                                android:text="@string/ex_kota_dari" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/destinationInputContainer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:hint="@string/label_destinasi"
                            android:textColorHint="@color/black"
                            app:boxBackgroundColor="@color/white"
                            app:boxCornerRadiusBottomEnd="12dp"
                            app:boxCornerRadiusBottomStart="12dp"
                            app:boxCornerRadiusTopEnd="12dp"
                            app:boxCornerRadiusTopStart="12dp"
                            app:boxStrokeColor="@color/content_grey"
                            app:hintTextColor="@color/content_grey">

                            <AutoCompleteTextView
                                android:id="@+id/etDestination"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="16dp"
                                android:drawableStart="@drawable/home_airplanelanding"
                                android:drawablePadding="8dp"
                                android:padding="12dp"
                                android:text="@string/ex_kota_tujuan" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tipePenerbangan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:hint="@string/tipe_penerbangan"
                            android:textColorHint="@color/black"
                            app:boxBackgroundColor="@color/white"
                            app:boxCornerRadiusBottomEnd="12dp"
                            app:boxCornerRadiusBottomStart="12dp"
                            app:boxCornerRadiusTopEnd="12dp"
                            app:boxCornerRadiusTopStart="12dp"
                            app:boxStrokeColor="@color/content_grey"
                            app:hintTextColor="@color/content_grey">

                            <AutoCompleteTextView
                                android:id="@+id/etTipe"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="16dp"
                                android:drawableStart="@drawable/home_airplanelanding"
                                android:drawablePadding="8dp"
                                android:padding="12dp"
                                android:text="@string/sekali_jalan" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tglBerangkatInputContainer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:hint="@string/label_tanggal_berangkat"
                            android:textColorHint="@color/black"
                            app:boxBackgroundColor="@color/white"
                            app:boxCornerRadiusBottomEnd="12dp"
                            app:boxCornerRadiusBottomStart="12dp"
                            app:boxCornerRadiusTopEnd="12dp"
                            app:boxCornerRadiusTopStart="12dp"
                            app:boxStrokeColor="@color/content_grey"
                            app:hintTextColor="@color/content_grey">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etTglBerangkatInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableStart="@drawable/home_schedule"
                                android:drawablePadding="8dp"
                                android:inputType="none"
                                android:text="@string/ex_tgl_brkt"
                                android:editable="false"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tglSelesaiInputContainer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:hint="@string/label_tanggal_berangkat"
                            android:textColorHint="@color/black"
                            app:boxBackgroundColor="@color/white"
                            app:boxCornerRadiusBottomEnd="12dp"
                            app:boxCornerRadiusBottomStart="12dp"
                            app:boxCornerRadiusTopEnd="12dp"
                            app:boxCornerRadiusTopStart="12dp"
                            app:boxStrokeColor="@color/content_grey"
                            app:hintTextColor="@color/content_grey">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etTglSelesaiInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableStart="@drawable/home_schedule"
                                android:drawablePadding="8dp"
                                android:inputType="none"
                                android:text="@string/ex_tgl_selesai"
                                android:editable="false"/>
                        </com.google.android.material.textfield.TextInputLayout>


                        <LinearLayout
                            android:id="@+id/jmlKelasContainer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2">
                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                android:id="@+id/jamBerangkatInputContainer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:hint="@string/label_jam_berangkat"
                                android:textColorHint="@color/black"
                                app:boxBackgroundColor="@color/white"
                                app:boxCornerRadiusBottomEnd="12dp"
                                app:boxCornerRadiusBottomStart="12dp"
                                app:boxCornerRadiusTopEnd="12dp"
                                app:boxCornerRadiusTopStart="12dp"
                                app:boxStrokeColor="@color/content_grey"
                                app:hintTextColor="@color/content_grey">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/etJamBerangkatInput"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/home_schedule"
                                    android:drawablePadding="8dp"
                                    android:editable="false"
                                    android:inputType="none"
                                    android:text="17:00" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_weight="1"
                                android:layout_marginLeft="5dp"
                                android:id="@+id/jamKedatanganInputContainer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:hint="@string/label_jam_datang"
                                android:textColorHint="@color/black"
                                app:boxBackgroundColor="@color/white"
                                app:boxCornerRadiusBottomEnd="12dp"
                                app:boxCornerRadiusBottomStart="12dp"
                                app:boxCornerRadiusTopEnd="12dp"
                                app:boxCornerRadiusTopStart="12dp"
                                app:boxStrokeColor="@color/content_grey"
                                app:hintTextColor="@color/content_grey">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/etJamKedatanganInput"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/home_schedule"
                                    android:drawablePadding="8dp"
                                    android:editable="false"
                                    android:inputType="none"
                                    android:text="19:00" />

                            </com.google.android.material.textfield.TextInputLayout>


                        </LinearLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:hint="@string/label_hargaDewasa"
                            android:textColorHint="@color/black"
                            app:boxBackgroundColor="@color/white"
                            app:boxCornerRadiusBottomEnd="12dp"
                            app:boxCornerRadiusBottomStart="12dp"
                            app:boxCornerRadiusTopEnd="12dp"
                            app:boxCornerRadiusTopStart="12dp"
                            app:boxStrokeColor="@color/content_grey"
                            app:hintTextColor="@color/content_grey">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etAdultPrice"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="none"
                                android:editable="false"
                                android:text="@string/ex_hargadewasa" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:hint="@string/label_hargaAnakAnak"
                            android:textColorHint="@color/black"
                            app:boxBackgroundColor="@color/white"
                            app:boxCornerRadiusBottomEnd="12dp"
                            app:boxCornerRadiusBottomStart="12dp"
                            app:boxCornerRadiusTopEnd="12dp"
                            app:boxCornerRadiusTopStart="12dp"
                            app:boxStrokeColor="@color/content_grey"
                            app:hintTextColor="@color/content_grey">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etChildPrice"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="none"
                                android:editable="false"
                                android:text="@string/ex_hargaanakanak" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/jmlKapasitasContainer"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:hint="@string/label_Kapasitas"
                            android:textColorHint="@color/black"
                            app:boxBackgroundColor="@color/white"
                            app:boxCornerRadiusBottomEnd="12dp"
                            app:boxCornerRadiusBottomStart="12dp"
                            app:boxCornerRadiusTopEnd="12dp"
                            app:boxCornerRadiusTopStart="12dp"
                            app:boxStrokeColor="@color/content_grey"
                            app:hintTextColor="@color/content_grey">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etJmlPenumpangInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="none"
                                android:editable="false"
                                android:text="@string/ex_kapasitasPenumpang" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <Button
                            android:id="@+id/btnAdd"
                            style="@style/button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/btn_tambah_penerbangan" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </LinearLayout>

</FrameLayout>