<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.AddNotificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_home"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="20dp"
            android:layout_marginHorizontal="23dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView

                    android:id="@+id/cvSearchContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    app:cardCornerRadius="16dp"
                    app:contentPaddingTop="8dp"
                    app:contentPaddingBottom="8dp"
                    app:contentPaddingLeft="16dp"
                    app:contentPaddingRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/broadcast_notifikasi"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="18dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/pesanBroadcastContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="36dp"
                        android:hint="@string/pesan_broadcast"
                        android:textColorHint="@color/black"
                        app:boxBackgroundColor="@color/white"
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusTopStart="12dp"
                        app:boxStrokeColor="@color/content_grey"
                        app:hintTextColor="@color/content_grey">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPesanBroadcastInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/notification_broadcast"
                            android:drawablePadding="0dp"
                            android:inputType="none"
                            android:text="@string/boradcastnote"
                            android:fontFamily="@font/inter_medium"
                            android:textSize="12dp"
                            android:textStyle="bold"/>

                        <Button
                            android:layout_marginTop="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/button"
                            android:backgroundTint="@color/orange"
                            android:text="Bagikan Notifikasi"
                            android:textStyle="bold"
                            android:fontFamily="@font/poppins_medium"
                            android:textSize="18dp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </LinearLayout>


</FrameLayout>